# cpp_simple_interface

./: .gitignore  README.md  pyproject.toml
cpp_simple_interface/: __init__.py  check_gpp.py  main.py
